--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
         <div id="current-exchange-rate">
             <h2>Cursul valutar actual</h2>
             <table id="current-exchange-rate-table">
-                <tr>
+                <th>
                     <th>Moneda</th>
-                    <th id="today">Astazi</th>
-                </tr>
-                <tr>
-                    <td>AUD</td>
-                    <td id="AUD"></td>
-                </tr>
+                    <th>Astazi</th>
+                </th>
+                <tbody id="table-body">
+
+                </tbody>
             </table>
         </div>
     </body>
