--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheets" src="styles.css" />
-        <script src="js.js"></script>
+        <script async src="js.js"></script>
     </head>
     <body>
         <div id="current-exchange-rate">
@@ -15,7 +15,7 @@
                     <th>Moneda</th>
                     <th>Astazi</th>
                 </th>
-                <tbody id="table-body">
+                <tbody id="tablebody">
 
                 </tbody>
             </table>
