--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
         <div id="current-exchange-rate">
             <h2>Cursul valutar actual</h2>
             <table id="current-exchange-rate-table">
-                <th>
+                <tr>
                     <th>Moneda</th>
                     <th>Astazi</th>
-                </th>
+                </tr>
                 <tbody id="tablebody">
-
+                    <tr class="tr">
+                        <td class="currency"></td>
+                        <td class="number"></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
